deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployed-app-v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: deployed-app
  template:
    metadata:
      labels:
        app: deployed-app
        version: v1
    spec:
      containers:
      - image: jamesmilligan/basic-http
        name: deployment-1
        ports:
            - containerPort: 8081
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployed-app-v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: deployed-app
  template:
    metadata:
      labels:
        app: deployed-app
        version: v1
    spec:
      containers:
      - image: jamesmilligan/basic-http
        name: deployment-2
        ports:
            - containerPort: 8081
