ingress.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: deploy-1
  labels:
    app: deploy-1
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - http:
        paths:
        - path: /test
          pathType: Prefix
          backend:
            service:
              name: deploy-1-service
              port:
                number: 8081
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: deploy-2-canary
  labels:
    app: deploy-2
  annotations:
    kubernetes.io/ingress.class: "nginx"

    # Enable canary and send 30% of traffic to version 2
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-weight: "30"
spec:
  rules:
    - http:
        paths:
        - path: /test
          pathType: Prefix
          backend:
            service:
              name: deploy-2-service
              port:
                number: 8081
